updated product object

--- a/index.html
+++ b/index.html
@@ -90,31 +90,27 @@
                 </div>
 
                 <div class="product-price">
-                  <!-- <p class="last-price">Price: <span>₹499/piece</span></p> -->
-                  <p class="new-price">
+                  <p class="exwork-price">Price: <span>₹499/piece</span></p>
+                  <p class="fob-price">
                     Price: <span>₹499/piece (5% gst)</span>
                   </p>
                 </div>
 
                 <div class="product-detail">
                   <h2>about this item:</h2>
-                  <p>
+                  <p class="product-desc">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Illo eveniet veniam tempora fuga tenetur placeat sapiente
                     architecto illum soluta consequuntur, aspernatur quidem at
                     sequi ipsa!
                   </p>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Consequatur, perferendis eius. Dignissimos, labore suscipit.
-                    Unde.
-                  </p>
-                  <ul>
-                    <li>Color: <span>Golden Spray Painted</span></li>
+
+                  <ul class="specs">
+                    <!-- <li>Color: <span>Golden Spray Painted</span></li>
                     <li>Available: <span>in stock</span></li>
                     <li>Category: <span>Indian Traditional </span></li>
-                    <li>Shipping Area: <span>All over the world</span></li>
-                    <!-- <li>Shipping Fee: <span>Free</span></li> -->
+                    <li>Shipping Area: <span>All over the world</span></li> 
+                  <li>Shipping Fee: <span>Free</span></li> -->
                   </ul>
                 </div>
 
@@ -177,8 +173,11 @@
               Explore our FAQs, Videos, Blogs to find answers to various common
               questions.
             </p>
-            <button class="content-btn">
-              <a href="/content">Explore blogs</a>
+            <button
+              class="content-btn"
+              onclick="window.open('https://www.youtube.com/@DhimansYouTube', '_blank')"
+            >
+              <a href="https://www.youtube.com/@DhimansYouTube">Explore</a>
             </button>
           </div>
           <div class="videos">
@@ -202,7 +201,7 @@
             <a>Catalogue</a>
           </div>
           <ul class="product-grid" id="products">
-            <li class="product-item">
+            <!-- <li class="product-item">
               <div class="product-card">
                 <div class="badge">New</div>
                 <div class="product-thumb">
@@ -210,7 +209,7 @@
                 </div>
                 <div class="product-details">
                   <span class="product-category">Indian Traditional</span>
-                  <h4><a href="product.html">Metal wall art</a></h4>
+                  <h4><a href="#">Metal wall art</a></h4>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Vero, possimus nostrum!
@@ -219,12 +218,11 @@
                     <div class="product-price">₹499/piece</div>
                     <div class="product-links">
                       <a href=""><i class="fa fa-heart"></i></a>
-                      <a href=""><i class="fa fa-shopping-cart"></i></a>
                     </div>
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
