--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -12,15 +12,31 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
     <title>Dhiman's</title>
   </head>
   <body>
-    <header class="primary-header">
+    <nav>
+      <div class="logo">
+        <img decoding="async" src="images/multiwebpress.png" alt="Logo Image" />
+      </div>
+      <div class="hamburger">
+        <div class="bars1"></div>
+        <div class="bars2"></div>
+        <div class="bars3"></div>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Collections</a></li>
+        <li><button class="login-button" href="#">Browse</button></li>
+      </ul>
+    </nav>
+    <!-- <header class="primary-header">
       <div class="container">
         <h1><a href="index.html">Dhiman's</a></h1>
         <nav class="primary-navigation">
-          <ul role="list" class="nav-list">
+          <ul role="list" class="nav-list nav-links">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Collections</a></li>
@@ -32,8 +48,13 @@
         >
           Browse Catalogue
         </button>
-      </div>
-    </header>
+        <div class="hamburger">
+          <div class="bars1"></div>
+          <div class="bars2"></div>
+          <div class="bars3"></div>
+        </div>
+      </div> 
+    </header> -->
     <main>
       <!-- The Modal -->
       <div id="myModal" class="modal">
@@ -224,6 +245,114 @@
               </div>
             </li> -->
           </ul>
+        </div>
+      </section>
+
+      <section class="certifications">
+        <div class="cert-head">Memberships and Certifications</div>
+        <div class="slider">
+          <div class="slide-track">
+            <div class="slide">
+              <img src="/images/certifications/apeda.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/dgft.jpeg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/fda.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/fieo.jpeg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/gcci.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/gmp.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/gstc.jpeg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/halal.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/msme.png" alt="" />
+            </div>
+            <div class="slide">
+              <img src="/images/certifications/spbi.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contact" id="contact">
+        <div class="enquiry-head">
+          <span class="heading">Enquiry form</span>
+        </div>
+        <div class="enquiry">
+          <form>
+            <div class="field">
+              <label for="name">Name</label>
+              <input
+                id="name"
+                type="text"
+                name="name"
+                placeholder="Jane Doe"
+                required
+              />
+            </div>
+            <div class="field">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="jane@trade.com"
+                required
+              />
+            </div>
+
+            <div class="field">
+              <label for="phone">Phone number</label>
+              <input
+                type="tel"
+                name="telphone"
+                placeholder="918888888888"
+                pattern="[0-9]{2}[0-9]{10}"
+                maxlength="12"
+                title="country code + phone number "
+                required
+              />
+            </div>
+
+            <div class="field">
+              <label for="country">Country</label>
+              <input type="text" name="country" id="country" required />
+            </div>
+            <div class="field">
+              <label for="message">Message</label>
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                required
+              ></textarea>
+            </div>
+            <button type="submit">Submit</button>
+          </form>
+          <div class="map">
+            <span>Find us at:</span>
+            <div class="frame">
+              <iframe
+                src="http://www.google.com/maps?q=20.920715, 77.748138&z=15&output=embed"
+                style="border: 0; border-radius: 5px"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
+          </div>
         </div>
       </section>
 
