--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,7 +20,12 @@
   <body>
     <nav>
       <div class="logo">
-        <img decoding="async" src="images/multiwebpress.png" alt="Logo Image" />
+        <img
+          decoding="async"
+          src="images/multiwebpress.png"
+          alt="Logo Image"
+          style="width: 100vh; padding-top: 5%; display: flex; flex-wrap: wrap"
+        />
       </div>
       <div class="hamburger">
         <div class="bars1"></div>
@@ -184,9 +191,31 @@
           </div>
         </div>
       </section>
-
       <section class="yawa">
         <div class="content-head">You ask, we answer</div>
+        <div style="text-align: center">
+          <p>
+            Get all your doubts resolved related to product, services, delivery
+            or any other topic by clicking on the given links below.
+          </p>
+        </div>
+        <div class="thumbnail">
+          <div class="thumb-card">
+            <div class="img-thumb">
+              <a href="faq.html"><img src="images/thumb1.png" alt="image" /></a>
+            </div>
+          </div>
+          <div class="thumb-card">
+            <div class="img-thumb">
+              <a href="faq.html"><img src="images/thumb1.png" alt="image" /></a>
+            </div>
+          </div>
+          <div class="thumb-card">
+            <div class="img-thumb">
+              <a href="faq.html"><img src="images/thumb1.png" alt="image" /></a>
+            </div>
+          </div>
+        </div>
         <div class="content">
           <div class="faq">
             <p>Get all your doubts about the trade, answered from us.</p>
