faq,image stack,whatsapp,server,icons done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="bars3"></div>
       </div>
       <ul class="nav-links">
-        <li><a href="#">About Us</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Collections</a></li>
         <li><button class="login-button" href="#">Browse</button></li>
@@ -180,20 +180,78 @@
           <a href="#">Featured</a>
         </div>
         <div class="feature-container">
-          <div class="prod-1">
+          <!-- <div class="prod-1">
+            <img src="images/1/DSC1.jpg" alt="" class="featured-img" />
+            <img src="images/2/DSC1.JPG" alt="" class="featured-img" />
+            <img src="images/3/DSC1.jpg" alt="" class="featured-img" />
+            <img src="images/4/DSC1.jpg" alt="" class="featured-img" />
             <img src="images/feature-3.jpg" alt="" class="featured-img" />
           </div>
-          <div class="prod-2">
+          <div class="prod-4">
+            <div class="prod-2">
+              <img src="images/feature-2.jpg" alt="" class="featured-img" />
+              <img src="images/5/DSC2.JPG" alt="" class="featured-img" />
+              <img src="images/5/DSC1.JPG" alt="" class="featured-img" />
+              <img src="images/5/DSC3.JPG" alt="" class="featured-img" />
+              <img src="images/6/homecenter.jpeg" alt="" class="featured-img" />
+            </div>
+            <div class="prod-3">
+              <img src="images/feature-1.jpg" alt="" class="featured-img" />
+              <img src="images/5/DSC2.JPG" alt="" class="featured-img" />
+              <img src="images/5/DSC1.JPG" alt="" class="featured-img" />
+              <img src="images/5/DSC3.JPG" alt="" class="featured-img" />
+              <img src="images/6/homecenter.jpeg" alt="" class="featured-img" />
+            </div> -->
+            <div class="prod-1">
+              <a href="product.html">
+                <img src="images/1/DSC1.jpg" alt="" class="featured-img" />
+                <img src="images/2/DSC1.JPG" alt="" class="featured-img" />
+                <img src="images/3/DSC1.jpg" alt="" class="featured-img" />
+                <img src="images/4/DSC1.jpg" alt="" class="featured-img" />
+                <img src="images/feature-3.jpg" alt="" class="featured-img" />
+              </a>
+            </div>
+  
+            <div class="prod-4">
+              <a href="product.html">
+                <div class="prod-2">
+                  <img src="images/feature-2.jpg" alt="" class="featured-img" />
+                  <img src="images/5/DSC2.JPG" alt="" class="featured-img" />
+                  <img src="images/5/DSC1.JPG" alt="" class="featured-img" />
+                  <img src="images/5/DSC3.JPG" alt="" class="featured-img" />
+                  <img
+                    src="images/6/homecenter.jpeg"
+                    alt=""
+                    class="featured-img"
+                  />
+                </div>
+              </a>
+              <a href="product.html">
+                <div class="prod-3">
+                  <img src="images/feature-1.jpg" alt="" class="featured-img" />
+                  <img src="images/5/DSC2.JPG" alt="" class="featured-img" />
+                  <img src="images/5/DSC1.JPG" alt="" class="featured-img" />
+                  <img src="images/5/DSC3.JPG" alt="" class="featured-img" />
+                  <img
+                    src="images/6/homecenter.jpeg"
+                    alt=""
+                    class="featured-img"
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- <div class="prod-2">
             <img src="images/feature-2.jpg" alt="" class="featured-img" />
           </div>
           <div class="prod-3">
             <img src="images/feature-1.jpg" alt="" class="featured-img" />
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="yawa">
         <div class="content-head">You ask, we answer</div>
-        <div style="text-align: center">
+        <div class="faq">
           <p>
             Get all your doubts resolved related to product, services, delivery
             or any other topic by clicking on the given links below.
@@ -207,16 +265,16 @@
           </div>
           <div class="thumb-card">
             <div class="img-thumb">
-              <a href="faq.html"><img src="images/thumb1.png" alt="image" /></a>
+              <a href="faq.html"><img src="images/thumb2.png" alt="image" /></a>
             </div>
           </div>
           <div class="thumb-card">
             <div class="img-thumb">
-              <a href="faq.html"><img src="images/thumb1.png" alt="image" /></a>
+              <a href="faq.html"><img src="images/thumb3.png" alt="image" /></a>
             </div>
           </div>
         </div>
-        <div class="content">
+        <!-- <div class="content">
           <div class="faq">
             <p>Get all your doubts about the trade, answered from us.</p>
             <p>
@@ -240,18 +298,18 @@
                 allowfullscreen
               ></iframe>
             </div>
-            <!-- <div class="content-card"></div> -->
+            <div class="content-card"></div>
           </div>
-        </div>
+        </div> -->
       </section>
 
-      <section class="collections" id="catalogue">
+      <!-- <section class="collections" id="catalogue">
         <div class="catalogue">
           <div class="collection-head">
             <a>Catalogue</a>
           </div>
           <ul class="product-grid" id="products">
-            <!-- <li class="product-item">
+               <li class="product-item">
               <div class="product-card">
                 <div class="badge">New</div>
                 <div class="product-thumb">
@@ -273,9 +331,9 @@
                 </div>
               </div>
             </li> -->
-          </ul>
+      <!-- </ul>
         </div>
-      </section>
+      </section> -->
 
       <section class="certifications">
         <div class="cert-head">Memberships and Certifications</div>
@@ -320,7 +378,7 @@
           <span class="heading">Enquiry form</span>
         </div>
         <div class="enquiry">
-          <form>
+          <form action="/" method="POST">
             <div class="field">
               <label for="name">Name</label>
               <input
@@ -345,11 +403,10 @@
             <div class="field">
               <label for="phone">Phone number</label>
               <input
-                type="tel"
-                name="telphone"
+                type="text"
+                name="phone"
                 placeholder="918888888888"
-                pattern="[0-9]{2}[0-9]{10}"
-                maxlength="12"
+                maxlength="20"
                 title="country code + phone number "
                 required
               />
@@ -392,13 +449,30 @@
             from your home . We have indian metal handicraft supplies & wall art
             from top suppliers.
           </p>
-          <div class="icons">
+          <div class="social-links">
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-google-plus"></i>
+            </a>
+          </div>
+          <!-- <div class="icons">
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-google-plus"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
-          </div>
+          </div> -->
         </div>
         <div class="footer-center col-md-4 col-sm-6">
           <div>
@@ -424,6 +498,43 @@
           <p class="name">Dhimans &copy; 2023</p>
         </div>
       </footer>
+      <div class="whatsapp_main">
+        <a href="https://wa.me/9405823171" target="_blank"
+          ><img src="images/whatsapp-con.png" width="7%" class="whatsapp_img"
+        /></a>
+      </div>
     </main>
+    <script type="text/javascript">
+      _linkedin_partner_id = "5234865";
+      window._linkedin_data_partner_ids =
+        window._linkedin_data_partner_ids || [];
+      window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+    </script>
+    <script type="text/javascript">
+      (function (l) {
+        if (!l) {
+          window.lintrk = function (a, b) {
+            window.lintrk.q.push([a, b]);
+          };
+          window.lintrk.q = [];
+        }
+        var s = document.getElementsByTagName("script")[0];
+        var b = document.createElement("script");
+        b.type = "text/javascript";
+        b.async = true;
+        b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+        s.parentNode.insertBefore(b, s);
+      })(window.lintrk);
+    </script>
+    <noscript>
+      <img
+        height="1"
+        width="1"
+        style="display: none"
+        alt=""
+        src="https://px.ads.linkedin.com/collect/?pid=5234865&fmt=gif"
+      />
+    </noscript>
+    
   </body>
 </html>
